--- a/news.txt
+++ b/news.txt
@@ -7,6 +7,7 @@
 Update 0.0.9(WIP):
 Added:
   + New main menu (gta 4 style)
+  + Added small island to pond in sandbox main map
   + Updated Sandbox Flat Map
   + Mouse wheel to change weapons
   + Car / Buggy
