--- a/news.txt
+++ b/news.txt
@@ -6,6 +6,7 @@
 
 Update 0.0.9(WIP):
 Added:
+  + Random Half Life 2 Song as Background Music in Main Menu
   + New main menu (gta 4 style)
   + Added small island to pond in sandbox main map
   + Updated Sandbox Flat Map
