--- a/news.txt
+++ b/news.txt
@@ -1,10 +1,6 @@
-==============================================================
-= Welcome to the news tab!
-==============================================================
-= Here you will find news about upcoming updates and events.
-==============================================================
+This is the News tab!!!
 
-<b>Update 0.0.9(WIP):</b>
+<u><b>Update 0.0.9(WIP):</b></u>
 Added:
   + Random Half Life 2 Song as Background Music in Main Menu
   + New main menu (gta 4 style)
@@ -16,7 +12,7 @@ Added:
   + Freecam (Tab key to toggel)
   + Debug Screen (F3 key to toggel)
 
-<b>Update 0.0.8:</b>
+<u><b>Update 0.0.8:</b></u>
 + New level selection screen
 + News tab
 + Tardis
