--- a/news.txt
+++ b/news.txt
@@ -1,6 +1,6 @@
 This is the News tab!!!
 
-<style="Title">Update 0.0.9(WIP):</style>
+<u><style="Title">Update 0.0.9(WIP):</style></u>
 Added:
   + Random Half Life 2 Song as Background Music in Main Menu
   + New main menu (gta 4 style)
@@ -12,7 +12,7 @@ Added:
   + Freecam (Tab key to toggel)
   + Debug Screen (F3 key to toggel)
 
-<style="Title">Update 0.0.8:</style>
+<u><style="Title">Update 0.0.8:</style></u>
 + New level selection screen
 + News tab
 + Tardis
