--- a/news.txt
+++ b/news.txt
@@ -2,6 +2,7 @@ This is the News tab!!!
 
 <u><style="Title">Update 0.0.9(WIP):</style></u>
 Added:
+  + Rich Text Support for the news Tab
   + Random Half Life 2 Song as Background Music in Main Menu
   + New main menu (gta 4 style)
   + Added small island to pond in sandbox main map
