--- a/news.txt
+++ b/news.txt
@@ -2,6 +2,7 @@ This is the News tab!!!
 
 <u><style="Title">Update 0.0.9(WIP):</style></u>
 Added:
+  + F-Stop Camera (Left click to photograph object, e to change slot and right click to place)
   + Bigger Lake
   + The flash in the Main menu is now dark when image changes
   + Rich Text Support for the news Tab
@@ -13,6 +14,9 @@ Added:
   + KM/H Display
   + Freecam (Tab key to toggel)
   + Debug Screen (F3 key to toggel)
+  
+Removed:
+  + Physgun
 
 <u><style="Title">Update 0.0.8:</style></u>
 + New level selection screen
