--- a/news.txt
+++ b/news.txt
@@ -1,5 +1,9 @@
 This is the News tab!!!
 
+<u><style="Title">Update 0.1.0(WIP):</style></u>
+Added:
+  + Console
+
 <u><style="Title">Update 0.0.9:</style></u>
 Added:
   + Updated Pause menu to look like Main menu
