--- a/news.txt
+++ b/news.txt
@@ -2,6 +2,8 @@ This is the News tab!!!
 
 <u><style="Title">Update 0.1.0(WIP):</style></u>
 Added:
+  + moved main menu music generator to lua file
+  + Lua scripting (THX TO MOONSHARP!!! PrintToConsole, SetPlayerHelth, CallNotification, GetBackgroundMusic, PlayAudioFile)
   + Error messages when error occurs
   + Console
 
