--- a/news.txt
+++ b/news.txt
@@ -3,7 +3,7 @@ This is the News tab!!!
 <u><style="Title">Update 0.1.0(WIP):</style></u>
 Added:
   + Lua scripting (THX TO MOONSHARP!!! PrintToConsole, SetPlayerHelth, CallNotification, GetBackgroundMusic, PlayAudioFile)
-    + moved main menu music generator to lua file
+    + Main menu background music generator moved to a lua script
   + Error messages when error occurs
   + Console
 
