--- a/news.txt
+++ b/news.txt
@@ -4,6 +4,7 @@ This is the News tab!!!
 Added:
   + Lua scripting (THX TO MOONSHARP!!! PrintToConsole, SetPlayerHelth, CallNotification, GetBackgroundMusic, PlayAudioFile)
     + Main menu background music generator moved to a lua script
+    + Main menu background moving images / flash moved to lua from c#
   + Error messages when error occurs
   + Console
 
