--- a/news.txt
+++ b/news.txt
@@ -1,5 +1,10 @@
 This is the News tab!!!
 
+<u><style="Title">Update 0.1.1:(WIP)</style></u>
+Added:
+
+Removed:
+
 <u><style="Title">Update 0.1.0:</style></u>
 Added:
   + 1 New Splash text
