--- a/news.txt
+++ b/news.txt
@@ -13,6 +13,7 @@ Added:
   + Left View models (to toggle cl_draw_viewmodel_side 1 (left) or 0 (right, normal)
   + Current screen resolution in the Debug Screen
   + Screenshots (F2 to take one)
+  + Ganades ammo counter
   + Added Weapon inspect animations
   + Added Reloading
   + Added Gauss Gun (Tau cannon)
