--- a/news.txt
+++ b/news.txt
@@ -2,6 +2,7 @@ This is the News tab!!!
 
 <u><style="Title">Update 0.2.0:(WIP)</style></u>
 Added:
+  + Loading GLTF maps from mainmenu
   + GLTF map loader
 
 Removed:
