--- a/news.txt
+++ b/news.txt
@@ -2,6 +2,7 @@ This is the News tab!!!
 
 <u><style="Title">Update 0.1.1:(WIP)</style></u>
 Added:
+  + rebalanced damage and health to be more like Half life 2
   + 2D Minecraft in Mini Games section 
   + Space Invaders in Mini Games section 
   + Mini Games tab in map select screen
